fix spacing

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -3,7 +3,7 @@
 }
 
 .header-section {
-  @apply flex items-center gap-3;
+  @apply flex items-center gap-[1em];
 }
 
 .header-logo {
@@ -15,7 +15,7 @@
 }
 
 .header-nav {
-  @apply flex gap-5;
+  @apply flex gap-[1em];
 }
 
 .header-links {
